# allowly-receipt-format

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  LICENSE-SPEC  README.md  test-vectors.json
.github/workflows/: publish-python.yml  publish-typescript.yml  verify.yml
scripts/: gen_vectors.py
spec/: receipt-format.md
verifiers/python/: README.md  pyproject.toml  test_exception_types.py  test_vectors.py  verifier.py
verifiers/python/src/allowly_receipt_format/: __init__.py  verifier.py
verifiers/typescript/: README.md  package-lock.json  package.json  test_vectors.ts  tsconfig.json  verifier.ts
